# stm32_cubemx_bmi088

Drivers/CMSIS/: LICENSE.txt
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/RTE/CMSIS/: RTX_Config.c
app/: CMakeLists.txt
app/bmi088/: CMakeLists.txt  bmi088.c  bmi088.h  bmi088.hpp  bmi088_config.h  bmi088_config.hpp  bmi088_registers.h  bmi088_registers.hpp  bmi088_utility.h  bmi088_utility.hpp
app/main/: CMakeLists.txt  main.c
